courses/430_programming-languages/assignment-6/tests/error/hw5_error04.nex
var i:int;
var j:int;
  fun f() : none
  {
    i = 3;
    j = 4;
    i = j > false;
  }
print "should not get here:n";
1 / 0;
   i = f();
